--- a/project/templates/activity/index.html.twig
+++ b/project/templates/activity/index.html.twig
@@ -8,20 +8,26 @@
     <table class="table">
         <thead>
             <tr>
-                <th>Id</th>
                 <th>Date</th>
-                <th>Status</th>
-                <th>User</th>
+                <th>Statut</th>
+                <th>Développeur</th>
+                <th>Suppléments</th>
                 <th>actions</th>
             </tr>
         </thead>
         <tbody>
         {% for activity in activities %}
             <tr>
-                <td>{{ activity.id }}</td>
-                <td>{{ activity.date ? activity.date|date('Y-m-d H:i:s') : '' }}</td>
-                <td>{{ activity.status ? 'Yes' : 'No' }}</td>
-                <td>{{ activity.user  }}</td>
+                <td>{{ activity.date ? activity.date|date('d/m/Y') : '' }}</td>
+                <td>{{ activity.status ? 'Actif' : 'Inactif' }}</td>
+                <td>{{ activity.user }}</td>
+                <td>
+                    <ul>
+                        {% for supplement in activity.supplements %}
+                            <li>{{ supplement.label }} - {{ supplement.percentage }}%</li>
+                        {% endfor %}
+                    </ul>
+                </td>
                 <td>
                     <a href="{{ path('app_activity_show', {'id': activity.id}) }}">show</a>
                     <a href="{{ path('app_activity_edit', {'id': activity.id}) }}">edit</a>
