--- a/project/templates/login/index.html.twig
+++ b/project/templates/login/index.html.twig
@@ -1,24 +1,28 @@
-{# templates/login/index.html.twig #}
-{% extends 'base.html.twig' %}
+{% extends 'base.html.twig' %} {% block body %} {% if
+app.session.flashbag.has('error') %}
+<div class="alert alert-danger">
+  {{ app.session.flashbag.get('error')|first }}
+</div>
+{% endif %}
 
-{# ... #}
+<form action="{{ path('app_login') }}" method="post">
+  <label for="username">Email:</label>
+  <input
+    type="text"
+    id="username"
+    name="_username"
+    value="{{ last_username }}"
+  />
 
-{% block body %}
-    {% if error %}
-        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+  <label for="password">Password:</label>
+  <input type="password" id="password" name="_password" />
 
-    <form action="{{ path('app_login') }}" method="post">
-        <label for="username">Email:</label>
-        <input type="text" id="username" name="_username" value="{{ last_username }}">
+  <input
+    type="hidden"
+    name="_csrf_token"
+    value="{{ csrf_token('authenticate') }}"
+  />
 
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="_password">
-
-        {# If you want to control the URL the user is redirected to on success
-        <input type="hidden" name="_target_path" value="/account"> #}
-        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-
-        <button type="submit">login</button>
-    </form>
+  <button type="submit">login</button>
+</form>
 {% endblock %}
