--- a/project/templates/login/index.html.twig
+++ b/project/templates/login/index.html.twig
@@ -1,28 +1,28 @@
-{% extends 'base.html.twig' %} {% block body %} {% if
-app.session.flashbag.has('error') %}
-<div class="alert alert-danger">
-  {{ app.session.flashbag.get('error')|first }}
-</div>
-{% endif %}
+{% extends 'base.html.twig' %}
 
-<form action="{{ path('app_login') }}" method="post">
-  <label for="username">Email:</label>
-  <input
-    type="text"
-    id="username"
-    name="_username"
-    value="{{ last_username }}"
-  />
 
-  <label for="password">Password:</label>
-  <input type="password" id="password" name="_password" />
+{% block body %}
+    {% if error %}
+        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+    {% endif %}
 
-  <input
-    type="hidden"
-    name="_csrf_token"
-    value="{{ csrf_token('authenticate') }}"
-  />
-
-  <button type="submit">login</button>
-</form>
+    <form action="{{ path('app_login') }}" method="post" class="mt-3">
+      <div class="mb-3">
+          <label for="username" class="form-label">Email:</label>
+          <input type="text" id="username" name="_username" value="{{ last_username }}" class="form-control" required>
+      </div>
+  
+      <div class="mb-3">
+          <label for="password" class="form-label">Password:</label>
+          <input type="password" id="password" name="_password" class="form-control" required>
+      </div>
+  
+      {# If you want to control the URL the user is redirected to on success
+      <input type="hidden" name="_target_path" value="/account"> #}
+  
+      <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+  
+      <button type="submit" class="btn btn-primary">Login</button>
+  </form>
+  
 {% endblock %}
