--- a/project/templates/developper/show.html.twig
+++ b/project/templates/developper/show.html.twig
@@ -1,22 +1,22 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}User{% endblock %}
+{% block title %}Détails du Développeur{% endblock %}
 
 {% block body %}
-    <h1>User</h1>
+    <h1>Détails du Développeur</h1>
 
-    <table class="table">
+    <table class="table table-dark table-striped">
         <tbody>
             <tr>
-                <th>Id</th>
+                <th>ID</th>
                 <td>{{ user.id }}</td>
             </tr>
             <tr>
-                <th>First_name</th>
+                <th>Prénom</th>
                 <td>{{ user.firstName }}</td>
             </tr>
             <tr>
-                <th>Last_name</th>
+                <th>Nom</th>
                 <td>{{ user.lastName }}</td>
             </tr>
             <tr>
@@ -24,23 +24,22 @@
                 <td>{{ user.email }}</td>
             </tr>
             <tr>
-                <th>Password</th>
+                <th>Mot de Passe</th>
                 <td>{{ user.password }}</td>
             </tr>
             <tr>
-                <th>Roles</th>
+                <th>Rôles</th>
                 <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
             </tr>
             <tr>
-                <th>Basic_cost</th>
+                <th>Coût de Base</th>
                 <td>{{ user.basicCost }}</td>
             </tr>
         </tbody>
     </table>
 
-    <a href="{{ path('app_developper_index') }}">back to list</a>
-
-    <a href="{{ path('app_developper_edit', {'id': user.id}) }}">edit</a>
+    <a href="{{ path('app_developper_index') }}" class="btn btn-dark">Retour à la liste</a>
+    <a href="{{ path('app_developper_edit', {'id': user.id}) }}" class="btn btn-primary">Modifier</a>
 
     {{ include('developper/_delete_form.html.twig') }}
 {% endblock %}
