--- a/project/templates/activity/edit.html.twig
+++ b/project/templates/activity/edit.html.twig
@@ -1,13 +1,16 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Activity{% endblock %}
+{% block title %}Modifier une Activité{% endblock %}
 
 {% block body %}
-    <h1>Edit Activity</h1>
+    <h1>Modifier une Activité</h1>
 
-    {{ include('activity/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('activity/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
 
-    <a href="{{ path('app_activity_index') }}">back to list</a>
-
-    {{ include('activity/_delete_form.html.twig') }}
+    <div class="d-flex justify-content-between mt-3">
+        <a href="{{ path('app_activity_index') }}" class="btn btn-dark">Retour à la liste</a>
+        <div>
+            {{ include('activity/_delete_form.html.twig') }}
+        </div>
+    </div>
 {% endblock %}
