--- a/project/templates/activity/index.html.twig
+++ b/project/templates/activity/index.html.twig
@@ -1,23 +1,23 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Activity index{% endblock %}
+{% block title %}Index des Activités{% endblock %}
 
 {% block body %}
-    <h1>Activity index</h1>
+    <h1>Liste des Activités</h1>
 
-    <table class="table">
+    <table class="table table-dark table-striped">
         <thead>
             <tr>
                 <th>Date</th>
                 <th>Statut</th>
                 <th>Développeur</th>
                 <th>Suppléments</th>
-                <th>actions</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
         {% for activity in activities %}
-            <tr>
+            <tr class="{{ activity.status ? 'table-active' : 'table-inactive' }}">
                 <td>{{ activity.date ? activity.date|date('d/m/Y') : '' }}</td>
                 <td>{{ activity.status ? 'Actif' : 'Inactif' }}</td>
                 <td>{{ activity.user }}</td>
@@ -29,18 +29,18 @@
                     </ul>
                 </td>
                 <td>
-                    <a href="{{ path('app_activity_show', {'id': activity.id}) }}">show</a>
-                    <a href="{{ path('app_activity_edit', {'id': activity.id}) }}">edit</a>
+                    <a type="button" class="btn btn-secondary" href="{{ path('app_activity_show', {'id': activity.id}) }}">Afficher</a>
+                    <a type="button" class="btn btn-primary" href="{{ path('app_activity_edit', {'id': activity.id}) }}">Modifier</a>
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="4">no records found</td>
+                <td colspan="5">Aucun enregistrement trouvé</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-    <a href="{{ path('app_activity_new') }}">Create new</a>
-    <button><a href="{{ path('app_show_activities')}}">Générer une facture</a></button>
+    <a type="button" class="btn btn-dark" href="{{ path('app_activity_new') }}">Créer une nouvelle activité</a>
+    <a type="button" class="btn btn-dark" href="{{ path('app_show_activities')}}">Générer une facture</a>
 {% endblock %}
