--- a/project/templates/activity/show.html.twig
+++ b/project/templates/activity/show.html.twig
@@ -1,30 +1,29 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Activity{% endblock %}
+{% block title %}Détails de l'Activité{% endblock %}
 
 {% block body %}
-    <h1>Activity</h1>
+    <h1>Détails de l'Activité</h1>
 
     <table class="table">
         <tbody>
             <tr>
-                <th>Id</th>
+                <th>ID</th>
                 <td>{{ activity.id }}</td>
             </tr>
             <tr>
                 <th>Date</th>
-                <td>{{ activity.date ? activity.date|date('Y-m-d H:i:s') : '' }}</td>
+                <td>{{ activity.date ? activity.date|date('d/m/Y H:i') : '' }}</td>
             </tr>
             <tr>
-                <th>Status</th>
-                <td>{{ activity.status ? 'Yes' : 'No' }}</td>
+                <th>Statut</th>
+                <td>{{ activity.status ? 'Oui' : 'Non' }}</td>
             </tr>
         </tbody>
     </table>
 
-    <a href="{{ path('app_activity_index') }}">back to list</a>
-
-    <a href="{{ path('app_activity_edit', {'id': activity.id}) }}">edit</a>
+    <a type="button" class="btn btn-dark" href="{{ path('app_activity_index') }}">Retour à la liste</a>
+    <a type="button" class="btn btn-dark" href="{{ path('app_activity_edit', {'id': activity.id}) }}">Modifier</a>
 
     {{ include('activity/_delete_form.html.twig') }}
 {% endblock %}
