--- a/project/templates/base.html.twig
+++ b/project/templates/base.html.twig
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}Welcome!{% endblock %}</title>
+    <title>{% block title %}Bienvenue !{% endblock %}</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
     {# Bootstrap CSS CDN #}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -17,27 +17,27 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-dark bg-dark border-bottom border-body" data-bs-theme="dark">
         <div class="container-fluid">
-            <!-- Logo on the left -->
+            <!-- Logo à gauche -->
             <a class="navbar-brand" href="{{ path('app_home') }}">Facturation</a>
     
-            <!-- Toggle button for small screens -->
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <!-- Bouton pour les petits écrans -->
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Navigation bascule">
                 <span class="navbar-toggler-icon"></span>
             </button>
     
-            <!-- Navigation links on the right -->
+            <!-- Liens de navigation à droite -->
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
+                <ul class="navbar-nav ms-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="{{ path('app_home') }}">Home</a>
+                        <a class="nav-link" href="{{ path('app_home') }}">Accueil</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="{{ path('app_developper_index') }}">Developpeurs</a>
+                        <a class="nav-link" href="{{ path('app_developper_index') }}">Développeurs</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/login">Login</a>
+                        <a class="nav-link" href="/login">Connexion</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('app_activity_index') }}">Activités</a>
@@ -47,12 +47,12 @@
                     </li>
                     {% if app.user %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('app_logout') }}">Logout</a>
+                            <a class="nav-link" href="{{ path('app_logout') }}">Déconnexion</a>
                         </li>
                     
                         {% if is_granted('ROLE_ADMIN') %}
                             <li class="nav-item">
-                                <a class="nav-link" href="/register">Ajouter un responsable</a>
+                                <a class="nav-link" href="/register">Ajouter un Responsable</a>
                             </li>
                         {% endif %}
                     {% endif %}
@@ -60,14 +60,14 @@
             </div>
         </div>
     </nav>
+    
 
 <div class="container mt-4">
     {% block body %}{% endblock %}
 </div>
 
-{# Bootstrap JS and Popper.js CDN #}
+{# Bootstrap JS et Popper.js CDN #}
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </html>
-
