--- a/project/templates/developper/index.html.twig
+++ b/project/templates/developper/index.html.twig
@@ -1,20 +1,20 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}User index{% endblock %}
+{% block title %}Index des Développeurs{% endblock %}
 
 {% block body %}
-    <h1>User index</h1>
+    <h1>Liste des Développeurs</h1>
 
-    <table class="table">
+    <table class="table table-dark table-striped">
         <thead>
             <tr>
-                <th>Id</th>
-                <th>First_name</th>
-                <th>Last_name</th>
+                <th>ID</th>
+                <th>Prénom</th>
+                <th>Nom</th>
                 <th>Email</th>
-                <th>Roles</th>
-                <th>Basic_cost</th>
-                <th>actions</th>
+                <th>Rôles</th>
+                <th>Coût de Base</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
@@ -27,17 +27,17 @@
                 <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
                 <td>{{ user.basicCost }}</td>
                 <td>
-                    <a href="{{ path('app_developper_show', {'id': user.id}) }}">show</a>
-                    <a href="{{ path('app_developper_edit', {'id': user.id}) }}">edit</a>
+                    <a type="button" class="btn btn-secondary" href="{{ path('app_developper_show', {'id': user.id}) }}">Afficher</a>
+                    <a type="button" class="btn btn-primary" href="{{ path('app_developper_edit', {'id': user.id}) }}">Modifier</a>
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="8">no records found</td>
+                <td colspan="7">Aucun enregistrement trouvé</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-    <a href="{{ path('app_developper_new') }}">Create new</a>
+    <a type="button" class="btn btn-dark" href="{{ path('app_developper_new') }}">Créer un nouveau</a>
 {% endblock %}
