--- a/project/templates/entreprise/_delete_form.html.twig
+++ b/project/templates/entreprise/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('app_entreprise_delete', {'id': entreprise.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('app_entreprise_delete', {'id': entreprise.id}) }}" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer cette entreprise ?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ entreprise.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-danger">Supprimer</button>
 </form>
