--- a/project/templates/entreprise/edit.html.twig
+++ b/project/templates/entreprise/edit.html.twig
@@ -1,13 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Entreprise{% endblock %}
+{% block title %}Modifier une Entreprise{% endblock %}
 
 {% block body %}
-    <h1>Edit Entreprise</h1>
+    <h1>Modifier une Entreprise</h1>
 
-    {{ include('entreprise/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('entreprise/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
 
-    <a href="{{ path('app_entreprise_index') }}">back to list</a>
-
-    {{ include('entreprise/_delete_form.html.twig') }}
+    <div class="d-flex justify-content-between mt-3">
+        <a href="{{ path('app_entreprise_index') }}" class="btn btn-dark">Retour à la liste</a>
+        {{ include('entreprise/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
