--- a/project/templates/entreprise/new.html.twig
+++ b/project/templates/entreprise/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Entreprise{% endblock %}
+{% block title %}Créer une Nouvelle Entreprise{% endblock %}
 
 {% block body %}
-    <h1>Create new Entreprise</h1>
+    <h1>Créer une Nouvelle Entreprise</h1>
 
     {{ include('entreprise/_form.html.twig') }}
 
-    <a href="{{ path('app_entreprise_index') }}">back to list</a>
+    <a href="{{ path('app_entreprise_index') }}" class="btn btn-dark">Retour à la liste</a>
 {% endblock %}
