--- a/project/templates/entreprise/show.html.twig
+++ b/project/templates/entreprise/show.html.twig
@@ -1,18 +1,18 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Entreprise{% endblock %}
+{% block title %}Détails de l'Entreprise{% endblock %}
 
 {% block body %}
-    <h1>Entreprise</h1>
+    <h1>Détails de l'Entreprise</h1>
 
-    <table class="table">
+    <table class="table table-dark table-striped">
         <tbody>
             <tr>
-                <th>Id</th>
+                <th>ID</th>
                 <td>{{ entreprise.id }}</td>
             </tr>
             <tr>
-                <th>Denomination_sociale</th>
+                <th>Dénomination Sociale</th>
                 <td>{{ entreprise.denominationSociale }}</td>
             </tr>
             <tr>
@@ -20,31 +20,32 @@
                 <td>{{ entreprise.adresse }}</td>
             </tr>
             <tr>
-                <th>Adresse_livraison</th>
+                <th>Adresse de Livraison</th>
                 <td>{{ entreprise.adresseLivraison }}</td>
             </tr>
             <tr>
-                <th>Adresse_facturation</th>
+                <th>Adresse de Facturation</th>
                 <td>{{ entreprise.adresseFacturation }}</td>
             </tr>
             <tr>
-                <th>Siren</th>
+                <th>SIREN</th>
                 <td>{{ entreprise.siren }}</td>
             </tr>
             <tr>
-                <th>IsClient</th>
-                <td>{{ entreprise.isClient ? 'Yes' : 'No' }}</td>
+                <th>Client</th>
+                <td>{{ entreprise.isClient ? 'Oui' : 'Non' }}</td>
             </tr>
             <tr>
-                <th>IsCurrent</th>
-                <td>{{ entreprise.isCurrent ? 'Yes' : 'No' }}</td>
+                <th>Actuelle</th>
+                <td>{{ entreprise.isCurrent ? 'Oui' : 'Non' }}</td>
             </tr>
         </tbody>
     </table>
 
-    <a href="{{ path('app_entreprise_index') }}">back to list</a>
-
-    <a href="{{ path('app_entreprise_edit', {'id': entreprise.id}) }}">edit</a>
+    <div class="d-flex justify-content-between">
+        <a href="{{ path('app_entreprise_edit', {'id': entreprise.id}) }}" class="btn btn-primary">Modifier</a>
+        <a href="{{ path('app_entreprise_index') }}" class="btn btn-dark">Retour à la liste</a>
+    </div>
 
     {{ include('entreprise/_delete_form.html.twig') }}
 {% endblock %}
