--- a/project/templates/login/index.html.twig
+++ b/project/templates/login/index.html.twig
@@ -1,28 +1,31 @@
 {% extends 'base.html.twig' %}
 
-
 {% block body %}
-    {% if error %}
-        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+    <div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
+        <div class="w-100" style="max-width: 400px;">
+            <h1 class="text-center mb-4">Connexion</h1>
+            {% if error %}
+                <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+            {% endif %}
 
-    <form action="{{ path('app_login') }}" method="post" class="mt-3">
-      <div class="mb-3">
-          <label for="username" class="form-label">Email:</label>
-          <input type="text" id="username" name="_username" value="{{ last_username }}" class="form-control" required>
-      </div>
-  
-      <div class="mb-3">
-          <label for="password" class="form-label">Password:</label>
-          <input type="password" id="password" name="_password" class="form-control" required>
-      </div>
-  
-      {# If you want to control the URL the user is redirected to on success
-      <input type="hidden" name="_target_path" value="/account"> #}
-  
-      <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-  
-      <button type="submit" class="btn btn-primary">Login</button>
-  </form>
-  
+            <form action="{{ path('app_login') }}" method="post" class="mt-3">
+                <div class="mb-3">
+                    <label for="username" class="form-label">Email :</label>
+                    <input type="text" id="username" name="_username" value="{{ last_username }}" class="form-control" required>
+                </div>
+        
+                <div class="mb-3">
+                    <label for="password" class="form-label">Mot de passe :</label>
+                    <input type="password" id="password" name="_password" class="form-control" required>
+                </div>
+        
+                {# Si vous souhaitez contrôler l'URL de redirection après la connexion réussie
+                <input type="hidden" name="_target_path" value="/account"> #}
+        
+                <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+        
+                <button type="submit" class="btn btn-primary">Se connecter</button>
+            </form>
+        </div>
+    </div>
 {% endblock %}
