--- a/project/templates/mail/index.html.twig
+++ b/project/templates/mail/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello MailController!{% endblock %}
+{% block title %}Bienvenue dans le MailController !{% endblock %}
 
 {% block body %}
 <style>
@@ -9,12 +9,12 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <h1>Bonjour {{ controller_name }} ! ✅</h1>
 
-    This friendly message is coming from:
+    Ce message amical provient de :
     <ul>
-        <li>Your controller at <code><a href="{{ '/var/www/project/src/Controller/MailController.php'|file_link(0) }}">src/Controller/MailController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/var/www/project/templates/mail/index.html.twig'|file_link(0) }}">templates/mail/index.html.twig</a></code></li>
+        <li>Votre contrôleur à <code><a href="{{ '/var/www/project/src/Controller/MailController.php'|file_link(0) }}">src/Controller/MailController.php</a></code></li>
+        <li>Votre template à <code><a href="{{ '/var/www/project/templates/mail/index.html.twig'|file_link(0) }}">templates/mail/index.html.twig</a></code></li>
     </ul>
 </div>
 {% endblock %}
