--- a/project/templates/option/edit.html.twig
+++ b/project/templates/option/edit.html.twig
@@ -1,13 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Option{% endblock %}
+{% block title %}Modifier une Option{% endblock %}
 
 {% block body %}
-    <h1>Edit Option</h1>
+    <h1>Modifier une Option</h1>
 
-    {{ include('option/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('option/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
 
-    <a href="{{ path('app_option_index') }}">back to list</a>
-
-    {{ include('option/_delete_form.html.twig') }}
+    <div class="d-flex justify-content-between mt-3">
+        <a href="{{ path('app_option_index') }}" class="btn btn-dark">Retour à la liste</a>
+        {{ include('option/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
