--- a/project/templates/option/new.html.twig
+++ b/project/templates/option/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Option{% endblock %}
+{% block title %}Créer une Nouvelle Option{% endblock %}
 
 {% block body %}
-    <h1>Create new Option</h1>
+    <h1>Créer une Nouvelle Option</h1>
 
     {{ include('option/_form.html.twig') }}
 
-    <a href="{{ path('app_option_index') }}">back to list</a>
+    <a href="{{ path('app_option_index') }}" class="btn btn-dark">Retour à la liste</a>
 {% endblock %}
