--- a/project/templates/option/show.html.twig
+++ b/project/templates/option/show.html.twig
@@ -1,30 +1,31 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Option{% endblock %}
+{% block title %}Détails de l'Option{% endblock %}
 
 {% block body %}
-    <h1>Option</h1>
+    <h1>Détails de l'Option</h1>
 
     <table class="table">
         <tbody>
             <tr>
-                <th>Id</th>
+                <th>ID</th>
                 <td>{{ option.id }}</td>
             </tr>
             <tr>
-                <th>Label</th>
+                <th>Libellé</th>
                 <td>{{ option.label }}</td>
             </tr>
             <tr>
-                <th>Percentage</th>
-                <td>{{ option.percentage }}</td>
+                <th>Pourcentage</th>
+                <td>{{ option.percentage }}%</td>
             </tr>
         </tbody>
     </table>
 
-    <a href="{{ path('app_option_index') }}">back to list</a>
-
-    <a href="{{ path('app_option_edit', {'id': option.id}) }}">edit</a>
+    <div class="d-flex justify-content-between">
+        <a href="{{ path('app_option_edit', {'id': option.id}) }}" class="btn btn-primary">Modifier</a>
+        <a href="{{ path('app_option_index') }}" class="btn btn-dark">Retour à la liste</a>
+    </div>
 
     {{ include('option/_delete_form.html.twig') }}
 {% endblock %}
